pratique/2014-p1-f2-memoria/2014-p1-f2-memoria-comp.txt
2014-p1-f2-memoria.cpp: In function ‘void bfs(int, int)’:
2014-p1-f2-memoria.cpp:12:25: warning: unused parameter ‘N’ [-Wunused-parameter]
   12 | void bfs(int start, int N) {
      |                     ~~~~^
2014-p1-f2-memoria.cpp: In function ‘int main()’:
2014-p1-f2-memoria.cpp:44:9: error: ‘memset’ was not declared in this scope
   44 |         memset(dist, -1, sizeof(dist));
      |         ^~~~~~
2014-p1-f2-memoria.cpp:5:1: note: ‘memset’ is defined in header ‘<cstring>’; did you forget to ‘#include <cstring>’?
    4 | #include <queue>
  +++ |+#include <cstring>
    5 | using namespace std;
2014-p1-f2-memoria.cpp:45:19: error: ‘class std::vector<int>’ has no member named ‘index_of’
   45 |         bfs(cards.index_of(i+1)-1, N);
      |                   ^~~~~~~~
